<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin_login_Activity"
    android:background="@color/colorPrimary">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/logintoolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="60dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:navigationIcon="@drawable/backic"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/logintol"
        app:titleTextColor="@color/colorWhite" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="188dp"
        android:layout_marginRight="188dp"
        android:text="Administrator Login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="23dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/youremailadmin"
        android:layout_width="389dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="143dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:focusableInTouchMode="true"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:hint="@string/youe"
        android:textColor="@color/colorPrimaryDark"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorIntxt" />

    <EditText
        android:id="@+id/logpasswordadmin"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="219dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:backgroundTint="@color/colorAccent"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:textColor="@color/colorPrimaryDark"
        android:hint="@string/passs"
        android:inputType="textPassword"
        android:textColorHint="@color/colorIntxt" />

    <Button
        android:id="@+id/logbuttonadmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="321dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:textColorHint="@color/colorIntxt"
        android:background="@drawable/btn_round"
        android:text="@string/logcap"
        />

</RelativeLayout>